--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,25 @@ header {
   margin-bottom: 30px;
 }
 
-h1 {
+.title-homepage {
+  color: #3282b8;
   font-size: 2em;
-  margin-bottom: 10px;
-  color: #2c3e50;
+  margin-bottom: 30px;
 }
 
 h2,
 h3 {
   color: #2c3e50;
+}
+
+.employeeListNames {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.createNewEmployeeHome {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .schedule-container {
@@ -439,6 +449,11 @@ textarea::placeholder {
   max-width: 1400px;
   margin: 40px auto;
   padding: 0 20px;
+}
+
+.mainDashboardTitle {
+  color: #3282b8;
+  margin-bottom: 30px;
 }
 
 .employee-card {
