--- a/client.css
+++ b/client.css
@@ -24,3 +24,19 @@
   background: #f9f9f9;
   border-radius: 6px;
 }
+
+/* ! scroll bar  */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #3498db;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #2980b9;
+}
