--- a/styles.css
+++ b/styles.css
@@ -792,3 +792,19 @@ textarea::placeholder {
   border-top: 1px solid #ddd;
   background-color: #f9f9f9;
 }
+
+/* ! scroll bar  */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #3498db;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #2980b9;
+}
