--- a/styles.css
+++ b/styles.css
@@ -171,13 +171,13 @@ h3 {
 }
 
 .instructions-section ul li {
-  /* position: relative; */
+  position: relative;
   padding-left: 24px;
   margin-bottom: 12px;
 }
 
 .instructions-section ul li::before {
-  content: "•";
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
