--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .main-navbar {
   display: flex;
   justify-content: space-between;
@@ -38,4 +44,3 @@
 .navbar-links a:hover {
   background-color: #f0f8ff;
 }
-
