--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f4f6f8;
+  background-color: #333;
   color: #333;
   padding: 20px;
   animation: fadeIn 0.5s ease;
@@ -126,14 +126,15 @@ header {
 }
 
 .title-homepage {
-  color: #9932b8;
-  font-size: 2em;
+  color: #1eff00;
+  font-size: 3em;
+  letter-spacing: 3px;
   margin-bottom: 30px;
 }
 
 h2,
 h3 {
-  color: #2c3e50;
+  color: #1eff00;
 }
 
 /* directions  */
@@ -806,9 +807,10 @@ textarea::placeholder {
   padding: 20px;
   margin-top: 60px;
   font-size: 0.9em;
-  color: #777;
+  color: #1eff00;
   border-top: 1px solid #ddd;
-  background-color: #f9f9f9;
+  background-color: #222;
+  letter-spacing: 1px;
 }
 
 /* ! scroll bar  */
