--- a/client.css
+++ b/client.css
@@ -23,10 +23,10 @@ body {
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease;
 }
 
-.client-comment-container:hover {
+/* .client-comment-container:hover {
   box-shadow: 0 10px 30px rgba(0, 255, 120, 0.1);
   transform: scale(1.01);
-}
+} */
 
 h1,
 h2 {
@@ -106,6 +106,10 @@ textarea {
   border-radius: 10px;
   color: #ddd;
   transition: transform 0.3s ease, background-color 0.3s ease;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  line-height: 1.6;
 }
 
 .comment-entry:hover {
@@ -147,7 +151,6 @@ textarea {
 .pdf-options input[type="date"]:hover {
   border-color: #79fdfe;
 }
-
 
 input[type="text"],
 input[type="date"],
