--- a/client.css
+++ b/client.css
@@ -6,7 +6,8 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #0f0f0f;
+  /* background-color: #0f0f0f; */
+  background-color: #111111;
   color: #f0f0f0;
   padding: 20px;
 }
