--- a/client.css
+++ b/client.css
@@ -171,12 +171,13 @@ textarea:focus {
   width: 10px;
 }
 ::-webkit-scrollbar-track {
-  background: #1a1a1a;
+  background: #111;
 }
 ::-webkit-scrollbar-thumb {
-  background: #1eff00aa;
+  background: #1eff00;
   border-radius: 10px;
+  cursor: grab;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #1eff00;
+  background: #39ff88;
 }
